<resources>
    <string name="app_name">王艺璇2018530816</string>
    <string name="send">send</string>
    <string name="please_your_maessage"> msg here </string>
    <string name="recive">get</string>
    <string name="takephoto">Photo</string>
    <string name="timer">timer</string>
    <string name="close">close</string>
    <string name="time">00:00:00</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="restart">restart</string>
    <string name="score">score</string>
    <string name="reset">reset</string>
    <string name="button">Button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>